Make code more pretty

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Methods for Adding CSS</title>
+    <!--TOP has link to stylesheet right here--> 
+
     <style>
-      p {background-color: green; 
+      p {
+        background-color: green; 
         color: white; 
-        font-size: 18px;}
+        font-size: 18px;
+      }
     </style>
   </head>
   <body>
+    <!--I included a class here. It was unnecessary.
+    I could have just added style to div -->
     <div class="banner">Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button style="background-color: orange; font-size: 18px;">Inline Method</button>
